2011-11-19 Bjoern Sarrazin <bjorn.sarrazin@cern.ch>
    * commit James' replacement of outputDAOD_ONIAMUMUHI with outputDESD_ONIAMUMUHIFile in Reco_trf.py 
    * Tagging as PATJobTransforms-00-03-78

2011-11-17  John Chapman  <John.Chapman@cern.ch>

	* share/skeleton.MergeHIT.py - move preExec/preInclude slightly
	later in skeleton. (Required for AF2 HIT file merging.)
	* Tagging as PATJobTransforms-00-03-77

2011-11-16 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Handle smoothly older versions of pyAMI with no conf file support.
    * Tagging as PATJobTransforms-00-03-76

2011-11-15 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Support for AMI configuration file via env var AMIConfFile.

2011-11-11 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Adding option fastPoolMerge for running mergePOOL.exe 
    * Added as an extension of existing MergePool_trf.py

2011-11-10  John Chapman  <John.Chapman@cern.ch>

	* share/skeleton.MergeHIT.py - add code to use postExec and
	postInclude runArgs if provided. (Required for AF2 HIT file
	merging.)
	* Tagging as PATJobTransforms-00-03-75

2011-11-06  Maarten Boonekamp
	* improve LARNOISE handling
	* Tagging as PATJobTransforms-00-03-74

2011-11-04 Thomas Gadfort <tgadfort@bnl.gov>
    * Adding new output for B-physics needed for H-ION running
    * Not tagged yet.

2011-11-03 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Correct definition of tmpRDO argument.
	* Tagging as PATJobTransforms-00-03-73    

2011-11-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Print full help for '--help' as well as '-h' (BaseOfCompositeTrf)

2011-10-28 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Adding outputNTUP_SMWENUJJFile and outputNTUP_SMWMUNUJJFile
	  in scripts/Reco_trf.py
	* Tagging as PATJobTransforms-00-03-72

2011-10-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Define tmpRDO in Configuration.py
    * Tagging as PATJobTransforms-00-03-71    
